<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EmployeeDetailActivity"
    android:background="#F5F7F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/name_header"
            android:textSize="20sp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="-10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/hint_name"
            android:background="@drawable/rounded_corner_text_field"
            android:padding="10dp"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/age_header"
            android:textSize="20sp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginBottom="-10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/age_field"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:hint="@string/hint_age"
            android:background="@drawable/rounded_corner_text_field"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/gender"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"
                android:buttonTint="#363062"/>
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:buttonTint="#363062"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/select_your_date_of_birth"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/date_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="Pick Date"
            android:layout_margin="10dp"
            android:backgroundTint="#363062"
            app:cornerRadius="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/department"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/departments"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:scrollbarSize="30sp"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginVertical="40dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/save"
            android:backgroundTint="#363062"
            app:cornerRadius="24dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>